<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="vm"
            type="com.hipaduck.chillaxingcat.presentation.viewmodel.CalendarViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/layout_legend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/legend_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_week_name_sun"
            android:textSize="14sp"
        />
        <TextView
            android:id="@+id/legend_text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_week_name_mon"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/legend_text_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_week_name_tue"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/legend_text_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_week_name_wed"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/legend_text_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_week_name_thu"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/legend_text_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_week_name_fri"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/legend_text_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_week_name_sat"
            android:textSize="14sp"
            />
    </LinearLayout>
</layout>